--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,2 @@
-@import "bootstrap-sprockets";
-@import "bootstrap"
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
