--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -18,8 +18,10 @@
         <a class="nav-link" href="#">Log Mood</a>
       </li>
     </ul>
-    <span class="navbar-nav ml-auto">
-      <%= link_to "Sign out", signout_path, id: "sign_out" %>
-    </span>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/signout">Sign Out</a>
+      </li>
+    </ul>
   </div>
 </nav>
