--- a/app/views/home/events.html.erb
+++ b/app/views/home/events.html.erb
@@ -3,3 +3,7 @@
     <li><%= event.summary %> (<%= event.id %>)</li>
   <% end %>
 </ul>
+
+<%= form_tag new_event_url do %>
+  <%= submit_tag 'Add event' %>
+<% end %>
