Add appointments to nav link

--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -12,7 +12,7 @@
         <a class="nav-link" href="#">Reports</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Calendar</a>
+        <%= link_to 'Appointments', appointments_redirect_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Log Mood</a>
