--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -2,5 +2,5 @@
   <h1 class="display-4">TherapyTrack</h1>
   <hr class="my-4">
   <p class="lead">TherapyTrack is an application for people with anxiety/depression that synthesizes user information in a single page report and remind users to schedule therapy appointments.</p>
-    <a class="btn btn-primary btn-lg" href="/auth/google_oauth2" role="button">Sign In with Google</a>
+    <%= link_to 'Sign In with Google', "/auth/google_oauth2", class: "btn btn-primary btn-lg"%>
 </div>
