Appointments can be added to google calendar (do not show on index page, though)

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -20,12 +20,12 @@
     <div class="form-group">
       <%= label_tag :start %>
       <br />
-      <%= datetime_field_tag :start %>
+      <%= date_field_tag :start %>
     </div>
     <div class="form-group">
       <%= label_tag :end %>
       <br />
-      <%= datetime_field_tag :end %>
+      <%= date_field_tag :end %>
     </div>
     <%= submit_tag 'Create Appointment', class: "btn btn-success" %>
   <% end %>
