--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -20,14 +20,12 @@
     <div class="form-group">
       <%= label_tag :start %>
       <br />
-      <%= date_field_tag :start_date %>
-      <%= time_field_tag :start_time %>
+      <%= datetime_field_tag :start %>
     </div>
     <div class="form-group">
       <%= label_tag :end %>
       <br />
-      <%= date_field_tag :end_date %>
-      <%= time_field_tag :end_time %>
+      <%= datetime_field_tag :end %>
     </div>
     <%= submit_tag 'Create Appointment', class: "btn btn-success" %>
   <% end %>
