--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="text-center">
   <h2>Appointment Details</h2>
   <br />  
+  <% puts params %>
   <%= form_tag "/appointments/#{params[:id]}", method: "put" do %>
     <div class="form-group">
       <%= label_tag :title %>
@@ -20,12 +21,13 @@
     <div class="form-group">
       <%= label_tag :start %>
       <br />
-      <%= datetime_field_tag :start, params[:start][:date_time]%>
+      <!-- yyyy-MM-ddThh:mm -->
+      <%= datetime_field_tag :start, params[:start][:date_time].to_datetime.strftime('%Y-%m-%dT%H:%M') %>
     </div>
     <div class="form-group">
       <%= label_tag :end %>
       <br />
-      <%= datetime_field_tag :end, params[:end][:date_time] %>
+      <%= datetime_field_tag :end, params[:end][:date_time].to_datetime.strftime('%Y-%m-%dT%H:%M') %>
     </div>
     <%= submit_tag 'Update Appointment', class: "btn btn-success" %>
   <% end %>
