--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,7 +3,7 @@
     <h1 class="display-4">Hello, <%= current_user.name %>!</h1>
     <hr class="my-4">
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Generate New Wellness Report</a>
+      <%= button_to 'Generate New Wellness Report', reports_path, class: 'btn btn-primary btn-lg'%>
     </p>
   </div>
 <% end %>
