--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,5 +1,7 @@
-<h1>Wellness Report</h1>
+<div align="center">
+  <h1>Wellness Report</h1>
 
-<% if @report.medical_report %>
-  <%= render 'medical_report'%>
-<% end %>
+  <% if @report.medical_report %>
+    <%= render 'medical_report'%>
+  <% end %>
+</div>
