--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">TherapyTrack</a>
+  <%= link_to 'TherapyTrack', root_path, class: "navbar-brand" %>
 </nav>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <%= link_to 'Home', root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Reports</a>
+        <%= link_to 'Reports', reports_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to 'Appointments', appointments_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Log Mood</a>
+        <%= link_to 'About', about_path, class: "nav-link" %>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
